# ICM20649

./: .gitignore  CMakeLists.txt  README.md
doc/: Doxyfile.in  main.dox
include/: ICM20649.hpp
src/: CMakeLists.txt  ICM20649.cpp  display_measurements.cpp  utils.hpp
test/: CMakeLists.txt  open_close.cpp
